--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,16 @@
 /client/build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+data/*
+http_ca.crt
+.config
 
 npm-debug.log*
 yarn-debug.log*
