GPT for Query process

--- a/config.json
+++ b/config.json
@@ -10,5 +10,8 @@
   "SPOTIFY": {
     "SPOTIFY_CLIENT_ID": "700e125faed34b1da9218184966e9e37",
     "SPOTIFY_CLIENT_SECRET": "c723e2a3faed48a7aeab365bc24f8664"
+  },
+  "OPENAI": {
+    "OPENAI_API_KEY": "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"
   }
 }
